# pystellplot

./: LICENSE  README.md  pyproject.toml  setup.py
pystellplot/: __init__.py
pystellplot/BiotSavart/: __init__.py  plot_poincare.py
pystellplot/Geometry/: __init__.py  compute_surface.py  magnetic_axis.py  plot_surface.py
pystellplot/Paraview/: __init__.py  coils_to_vtk.py  surf_to_vtk.py
pystellplot/VMEC/: __init__.py  plot_surfaces.py
src/VMEC/: __init__.py  plot_surfaces.py
